name:                hsker
version:             0.1
synopsis:            A simple game
description:         A simple game
license:             MIT
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          welcometothechango@gmail.com
copyright:           Ezequiel Alvarez
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10


executable hsker
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && <5
                     , mtl
                     , helm
                     , lens
                     , random
